# Tech-Challenge-2

./: constantes.py  main.py  pyproject.toml
.terraform/: main.tf
b3_web_scraping/: upload_file.py  web_scraping.py
b3_web_scraping/.aws/: credentials
output_file/: b3_data.csv  b3_data.parquet  dados_b3_30062024.csv
tests/: test_upload_file.py  test_web_scraping.py
