[tool.poetry]
name = "b3-web-scraping"
version = "0.1.0"
description = "Perform a scraping on the b3 website to upload to the s3 datalake"
authors = ["Samuel Perroni"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
pandas = "^2.2.2"
pytest = "^8.2.2"
boto3 = "^1.34.136"
python-dotenv = "^1.0.1"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
